/rewards/by-address support muti address format:
eg.
deposit address: 0xxxx
withdraw address:0xxxx
withdraw cred: 0x0100000000000000000000000xxx
